--- a/Buoi01/index.html
+++ b/Buoi01/index.html
@@ -12,14 +12,13 @@
 </head>
 
 <body>
-    <div class="H1_begin">
-        <h1>Khoa hoc lap trinh Frontend tai ZendVN</h1>
-    </div>
-    <p class="p_begin">Gioi han chi 12 hoc vien / 1 lop, dam bao hoc vien duoc kem cal sat va nam kien thuc tai moi buoi
-        hoc </p>
-    <p class="p_begin2">Han che hoc ly thuyet, tang thuc hanh thuc te</p>
-    <p class="p_begin3">hoc vien duoc huong dan cach tu duy giai quyet bai toan, doc nghien cuu tai lieu, tim kiem tren
-        Google</p>
+    <h1>
+        <code>
+            <script>
+                
+            </script>
+        </code>
+    </h1>
 </body>
 
 </html>
