--- a/Buoi02/baitap3/index.html
+++ b/Buoi02/baitap3/index.html
@@ -12,8 +12,13 @@
 <body>
    <div class="Backgrou">
     
-     <i class="fa-facebook fb-left fa"></i>
-     <i class="fa-facebook fb-right fa"></i>
+     <div class="background">
+        <i class=" fa fa-facebook fb-left"></i>
+     </div>
+     <div class="background1">
+        <i class="fa fa-facebook fb-right"></i>
+     </div>
+    
     </div>
   
   
