--- a/ratruonghayolaithemmaynam/index2.html
+++ b/ratruonghayolaithemmaynam/index2.html
@@ -183,12 +183,12 @@
         <div class="row titlemenu1">
           <div class="alert alert-info alert-note">
             <b style="color: red"
-              >Website đang bị tấn công nên có thể bị gián đoạn trong 1-2 phút
+              >Website đang bị <span style="font-weight:bold; color:black">Văn Duy</span> tấn công nên có thể bị gián đoạn trong 1-2 phút
               mong các bạn thông cảm.</b
             ><br />
             Bấm vào link này để lấy lại danh sách theo dõi và lịch sử đọc truyện
             <a
-              href="//truyenqqpro.com/dong-bo-tk.html"
+              href=""
               rel="nofollow noopener"
               class="vpn"
               target="_blank"
